syntax = "proto3";
package basis.company;
import "helpers.proto";
import "google/protobuf/timestamp.proto";
import "cost_tag.proto";

enum CompanyType {
	UNKNOWN = 0;
	PUBLIC = 1;
	SYNDICATE = 2;
	PRIVATE = 3;
}

message Company {
	string id = 1;
	CompanyType ty = 2;
	string region_id = 3;
	string email = 4;
	string name = 5;
	google.protobuf.Timestamp created = 7;
	google.protobuf.Timestamp updated = 8;
	uint64 history_len = 9;
	exonum.Hash history_hash = 10;
}

message TxCreatePrivate {
	message CostTag {
		string id = 1;
		string name = 2;
		string meta = 3;
	}
	message Founder {
		string member_id = 1;
		string occupation = 2;
		repeated basis.cost_tag.CostTagEntry default_cost_tags = 3;
	}
	string id = 1;
	string email = 2;
	string name = 3;
	repeated CostTag cost_tags = 4;
	Founder founder = 5;
	google.protobuf.Timestamp created = 6;
}

message TxUpdate {
	string id = 1;
	string email = 2;
	string name = 3;
	google.protobuf.Timestamp updated = 4;
}

message TxSetType {
	string id = 1;
	CompanyType ty = 2;
	google.protobuf.Timestamp updated = 3;
}

message TxDelete {
	string id = 1;
	string memo = 2;
	google.protobuf.Timestamp deleted = 3;
}

